<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_5sdp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/reservation_slot"
                android:textAlignment="center"
                android:textSize="@dimen/_22ssp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/slotPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/slot_price_00_sar_hour"
                android:textSize="@dimen/_16ssp" />


            <FrameLayout
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:animateLayoutChanges="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnReservation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/reservation"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    app:cornerRadius="@dimen/_8sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:backgroundTint="@color/errorColor"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/_8sdp" />

            </FrameLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>